# VINS_NO_ROS

./: CMakeLists.txt  README  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  main.cpp
camera_model/include/camodocal/camera_models/: Camera.h  CataCamera.h
camera_model/srcc/camera_models/: CameraFactory.cpp  ScaramuzzaCamera.cpp
camera_model/srcc/gpl/: gpl.cpp
config/euroc/: euroc_config.yaml
initial/: initial_aligment.cpp
output/: vins_result.csv  vins_result_no_loop.csv
